--- a/css/style.css
+++ b/css/style.css
@@ -16,16 +16,16 @@ body {
 .top-bar {
     background-color: #0A2C4A;
     width: 100vw;
-    height: 10vh; 
-    z-index: 200; 
-    position: fixed; 
+    height: 10vh;
+    z-index: 200;
+    position: fixed;
 }
 
 .logo {
-    width: 20vw; 
-    margin-top: 2.5vh; 
-    padding: 15px; 
-    margin-left: 50px; 
+    width: 20vw;
+    margin-top: 2.5vh;
+    padding: 15px;
+    margin-left: 50px;
 }
 
 .mySlides {
@@ -249,7 +249,7 @@ body {
 
 .navn-container {
     display: flex;
-    flex-direction: row;    
+    flex-direction: row;
 }
 
 
@@ -282,7 +282,7 @@ body {
     outline: 0;
     font-family: inherit;
     font-size: 0.95em;
-    margin: 12px; 
+    margin: 12px;
 }
 
 
@@ -347,7 +347,7 @@ body {
 
 
 
-/* STYLING TIL VISNING AF INFO-TEKST */ 
+/* STYLING TIL VISNING AF INFO-TEKST */
 
 #newpost {
   display: none;
@@ -356,7 +356,7 @@ body {
 #newpost.visible {
   display: block;
     display: flex;
-    justify-content: flex-start; 
+    justify-content: flex-start;
 }
 
 .check-krav {
@@ -365,4 +365,28 @@ body {
 
 .check-krav-text {
     font-size: 11.5px;
+}
+
+/* NUDGING BANNER */
+
+.nudging-banner {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #0A2C4A;
+  color: white;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nudging-banner input[type="submit"] {
+    background: transparent;
+    border-color: white;
+    color: #fff;
+    cursor: pointer;
+    padding: 5px;
+    margin-left: 20px;
 }
