--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #bg {
-  background-image: url("../image/Baggrund.jpg");
+  height: 200vh;
 }
 
 * {
@@ -14,18 +14,18 @@ body {
 }
 
 .top-bar {
-    background-color: #0A2C4A;
-    width: 100vw;
-    height: 10vh;
-    z-index: 200;
-    position: fixed;
+  background-color: #0A2C4A;
+  width: 100vw;
+  height: 10vh;
+  z-index: 200;
+  position: fixed;
 }
 
 .logo {
-    width: 20vw;
-    margin-top: 2.5vh;
-    padding: 15px;
-    margin-left: 50px;
+  width: 20vw;
+  margin-top: 2.5vh;
+  padding: 15px;
+  margin-left: 50px;
 }
 
 .mySlides {
@@ -224,8 +224,8 @@ body {
 
 /* FLEX AF FORNAVN & EFTERNAVN */
 .navn-container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 /* STYLING AF "LAND"-DROP-DOWN */
@@ -240,20 +240,20 @@ body {
 }
 
 .custom-select {
-    background: #fff;
-    border-color: #bbb;
-    border-style: solid;
-    color: #555;
-    border-width: 1px;
-    box-sizing: border-box;
-    display: block;
-    border-width: 1px;
-    border-style: solid;
-    padding: 16px;
-    outline: 0;
-    font-family: inherit;
-    font-size: 0.95em;
-    margin: 12px;
+  background: #fff;
+  border-color: #bbb;
+  border-style: solid;
+  color: #555;
+  border-width: 1px;
+  box-sizing: border-box;
+  display: block;
+  border-width: 1px;
+  border-style: solid;
+  padding: 16px;
+  outline: 0;
+  font-family: inherit;
+  font-size: 0.95em;
+  margin: 12px;
 }
 
 /*style the arrow inside the select element:*/
@@ -310,11 +310,9 @@ body {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-
-
 /* STYLING TIL VISNING AF INFO-TEKST */
-
 =======
+
 /* STYLING TIL VISNING AF INFO-TEKST */
 #newpost {
   display: none;
@@ -322,8 +320,6 @@ body {
 
 #newpost.visible {
   display: block;
-    display: flex;
-    justify-content: flex-start;
   display: flex;
   justify-content: flex-start;
 }
@@ -337,12 +333,68 @@ body {
 }
 
 /* NUDGING BANNER */
+.nudging-banner {
+  position: relative;
+  width: 92%;
+  height: 80vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 6%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.blue-overlay {
+  position: absolute;
+  width: 100%;
+  height: 96%;
+  background-color: #0a2c4a;
+  opacity: 0.5;
+  z-index: 1;
+  display: block;
+}
+
+.nudging-img {
+  width: 100%;
+  height: auto;
+}
+
+.nudging-banner-text {
+  position: absolute;
+  z-index: 2;
+  margin-left: -15vw;
+  font-size: 1.5rem;
+}
+
+.nudging-banner-btns {
+  margin-top: 5vh;
+}
+
+#opret {
+  background: #4AA22C;
+  color: #fff;
+  border-style: none;
+}
+
+#læs-mere {
+  background: #0A2C4A;
+  color: #fff;
+  border-style: none;
+}
 
 .nudging-banner {
+  color: #FFFFFF;
+}
+
+/* NUDGING BAR */
+.nudging-bar {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 8vh;
   background-color: #0A2C4A;
   color: white;
   text-align: center;
@@ -351,11 +403,19 @@ body {
   justify-content: center;
 }
 
-.nudging-banner input[type="submit"] {
-    background: transparent;
-    border-color: white;
-    color: #fff;
-    cursor: pointer;
-    padding: 5px;
-    margin-left: 20px;
+.nudging-bar p {
+  font-size: 1rem;
+}
+
+.btn {
+  padding: 5%;
+  cursor: pointer;
+  width: 7vw;
+}
+
+#verificer {
+  background: transparent;
+  border-color: white;
+  color: #fff;
+  margin-left: 2vw;
 }
