--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,11 @@ h3 {
   justify-content: flex-start;
 }
 
+.betingelser {
+  display: flex;
+  justify-content: flex-start;
+}
+
 .check-krav {
   margin-top: 12px;
 }
@@ -332,88 +337,6 @@ h3 {
 .check-krav-text {
   font-size: 11.5px;
 }
-
-/*///////pop up /////*/
-
-.button{
-    background-color: gray;
-    padding:1em 2em;
-    color:white;
-    border:0;
-    
-}
-
-.button:hover{
-    background: #333;
-}
-
-.modal{
-    display:none;
-    position:fixed;
-    z-index: 1;
-    left:0;
-    top:0;
-    height: 100%;
-    width:100%;
-    overflow: auto;
-    background-color: rgba(0,0,0, 0.5);
-}
-
-.modal-content{
-    background-color:#f4f4f4;
-    margin:20% auto;
-    padding:20px;
-    width:70%;
-    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgb(0,0,0,0.2);
-}
-
-.closebtn{
-    
-    color:#ccc;
-    float: right;
-    font-size: 30px;
-    
-}
-
-.closebtn:hover, .closebtn:focus{
-    color:#000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-
-.modal h1{
-    width:40%; 
-}
-
-.hvorfor{
-    width:40%;
-}
-
-.col1{
-    margin-left: 5%;
-}
-
-.col2{
-    width:40%;
-    font-size:1.2vw;
-    
-    margin-left:50%;
-    position:relative;
-    top:-160px;  
-}
-
-.jobtitel{
-    width:70%;
-    height:30px;
-    font-size: 1.1vw;
-    
-}
-
-
-
-
-
 
 /* NUDGING BANNER */
 .nav-bar-img {
@@ -512,11 +435,95 @@ h3 {
   margin-left: 2vw;
 }
 
-/* Øje til at vise kode */
+/* POP UP NUDGING */
 
-#eye {
-  float: right;
-  cursor: pointer;
-  margin-top: -33px;
-  margin-right: 10px;
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 999; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.progress-container {
+     width: 600px;
+     margin: 100px auto;
+ }
+ .progressbar {
+     counter-reset: step;
+ }
+ .progressbar li {
+     list-style-type: none;
+     width: 25%;
+     float: left;
+     font-size: 12px;
+     position: relative;
+     text-align: center;
+     text-transform: uppercase;
+     color: #7d7d7d;
+ }
+ .progressbar li:before {
+     width: 30px;
+     height: 30px;
+     content: counter(step);
+     counter-increment: step;
+     line-height: 30px;
+     border: 2px solid #7d7d7d;
+     display: block;
+     text-align: center;
+     margin: 0 auto 10px auto;
+     border-radius: 50%;
+     background-color: white;
+ }
+ .progressbar li:after {
+     width: 100%;
+     height: 2px;
+     content: '';
+     position: absolute;
+     background-color: #7d7d7d;
+     top: 15px;
+     left: -50%;
+     z-index: -1;
+ }
+ .progressbar li:first-child:after {
+     content: none;
+ }
+ .progressbar li.active {
+     color: green;
+ }
+ .progressbar li.active:before {
+     border-color: #55b776;
+ }
+ .progressbar li.active + li:after {
+     background-color: #55b776;
+ }
