--- a/css/style.css
+++ b/css/style.css
@@ -334,86 +334,74 @@ h3 {
 }
 
 /*///////pop up /////*/
-
-.button{
-    background-color: gray;
-    padding:1em 2em;
-    color:white;
-    border:0;
-
+.button {
+  background-color: gray;
+  padding: 1em 2em;
+  color: white;
+  border: 0;
 }
 
-.button:hover{
-    background: #333;
+.button:hover {
+  background: #333;
 }
 
-.modal{
-    display:none;
-    position:fixed;
-    z-index: 1;
-    left:0;
-    top:0;
-    height: 100%;
-    width:100%;
-    overflow: auto;
-    background-color: rgba(0,0,0, 0.5);
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.modal-content{
-    background-color:#f4f4f4;
-    margin:20% auto;
-    padding:20px;
-    width:70%;
-    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgb(0,0,0,0.2);
+.modal-content {
+  background-color: #f4f4f4;
+  margin: 20% auto;
+  padding: 20px;
+  width: 70%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgb(0, 0, 0, 0.2);
 }
 
-.closebtn{
-
-    color:#ccc;
-    float: right;
-    font-size: 30px;
-
+.closebtn {
+  color: #ccc;
+  float: right;
+  font-size: 30px;
 }
 
-.closebtn:hover, .closebtn:focus{
-    color:#000;
-    text-decoration: none;
-    cursor: pointer;
+.closebtn:hover, .closebtn:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-
-.modal h1{
-    width:40%;
+.modal h1 {
+  width: 40%;
 }
 
-.hvorfor{
-    width:40%;
+.hvorfor {
+  width: 40%;
 }
 
-.col1{
-    margin-left: 5%;
+.col1 {
+  margin-left: 5%;
 }
 
-.col2{
-    width:40%;
-    font-size:1.2vw;
-
-    margin-left:50%;
-    position:relative;
-    top:-160px;
+.col2 {
+  width: 40%;
+  font-size: 1.2vw;
+  margin-left: 50%;
+  position: relative;
+  top: -160px;
 }
 
-.jobtitel{
-    width:70%;
-    height:30px;
-    font-size: 1.1vw;
-
+.jobtitel {
+  width: 70%;
+  height: 30px;
+  font-size: 1.1vw;
 }
-
-
-
-
-
 
 /* NUDGING BANNER */
 .nav-bar-img {
@@ -510,4 +498,12 @@ h3 {
   border-color: white;
   color: #fff;
   margin-left: 2vw;
+}
+
+/* Øje til at vise kode */
+#eye {
+  float: right;
+  cursor: pointer;
+  margin-top: -33px;
+  margin-right: 10px;
 }
