--- a/css/style.css
+++ b/css/style.css
@@ -414,6 +414,19 @@ h3 {
 
 }
 
+#bgg{
+    background-image: url(/image/Baggrund.jpg);
+}
+
+#modcontent{
+    background-image: url(/image/logobaggrund.png);
+    background-size: cover;
+}
+
+
+
+
+
 .jobtitel{
     width:70%;
     height:30px;
