--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h3 {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: auto;
+  width: auto;
   height: 100vh;
   overflow: hidden;
   position: relative;
