--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ h3 {
     padding-bottom: 10px;
     width:95%;
     margin-left: 2.5%;
+    text-decoration: none;
     
 
 }
@@ -348,15 +349,19 @@ h3 {
 .progressesbar
 
 .button{
-    background-color: gray;
+    background-color: #4aa22c;
     padding:1em 2em;
     color:white;
     border:0;
+    position: absolute;
+    top:24%;
+    left:82%;
+    font-size: 0.8vw
 
 }
 
 .button:hover{
-    background: #333;
+    opacity: 0.5;
 }
 
 .modal{
@@ -368,7 +373,7 @@ h3 {
     height: 100%;
     width:100%;
     overflow: auto;
-    background-color: rgba(0,0,0, 0.5);
+    background-color: rgba(17, 73, 123, 0.8);
 }
 
 .modal-content{
@@ -379,9 +384,8 @@ h3 {
     box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgb(0,0,0,0.2);
 }
 
-.closebtn{
-
-    color:#ccc;
+#closebtn{
+    color:rgba(17, 73, 123);
     margin-left: 90%;
     font-size: 30px;
 
@@ -413,8 +417,6 @@ h3 {
     margin-left:50%;
     position:relative;
     top:-170px;
-
-
 }
 
 #bgg{
@@ -426,6 +428,33 @@ h3 {
     background-size: cover;
 }
 
+.progressesbar{
+    width:100vw;
+    background-color: white;
+    margin-top: 140px;
+    position:relative;
+    height:9vh;
+    
+}
+
+
+
+.progressesbar img{
+    width:25%;
+    position: absolute;
+    top:15%;
+    left:10%
+}
+
+.progressesbar p {
+    
+    display: inline-block;
+    position: absolute;
+    left:42%;
+    top:5%;
+    font-size: 1vw;
+}
+
 
 
 
@@ -435,6 +464,25 @@ h3 {
     height:30px;
     font-size: 1.1vw;
 
+}
+
+.videre{
+        background-color: #4aa22c;
+    padding:1em 2em;
+    color:white;
+    font-size: 0.8vw;
+    margin-left: 88%;
+    width:8vw;
+}
+
+.spring{
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    color:#c9c9c9;
+    font-size: 1vw;
+    position: relative;
+    top:20px; 
 }
 
 /* NUDGING BANNER */
